@@ -1,15 +1,28 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(CUnit/Sources/Framework/AssertImpl.c)
-AM_INIT_AUTOMAKE(CUnit, 1.0-6)
+AM_INIT_AUTOMAKE(CUnit, 1.0-6B)
 
 PACKAGE=CUnit
 VERSION=1.0
-RELEASE=6
+RELEASE=6B
 
 TOPDIR=`pwd`
 
-CFLAGS="-DRELEASE=@RELEASE@ -Wall -I${PWD}/CUnit/Headers -g"
+CFLAGS="-DRELEASE=@RELEASE@ -Wall -I${PWD}/CUnit/Headers"
 LDFLAGS="-L${PWD}/CUnit/Sources"
+
+AC_ARG_ENABLE(debug,
+	[  --enable-debug    enable debugging],
+	  [
+			CFLAGS="$CFLAGS -D_DEBUG -g3 -Wall"
+			LDFLAGS="$LDFLAGS -g"
+		])
+
+AC_ARG_ENABLE(memtrace,
+	[  --enable-memtrace    enable memory tracing],
+	  [
+			CFLAGS="$CFLAGS -DMEMTRACE"
+		])
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -19,13 +32,11 @@ AC_PROG_MAKE_SET
 
 dnl Checks for libraries
 AC_CHECK_LIB(c, main)  dnl Check for -lc
-AC_CHECK_LIB(ncurses, main)  dnl Check for -lncurses
 
 dnl Checks for header files.
 AC_HEADER_STDC
 AC_CHECK_HEADERS(assert.h)
 AC_CHECK_HEADERS(ctype.h)
-AC_CHECK_HEADERS(curses.h)
 AC_CHECK_HEADERS(math.h)
 AC_CHECK_HEADERS(file.h)
 AC_CHECK_HEADERS(stdio.h)
